* customizable template loaders * fetch api loader

--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,9 @@
   "repository": {
       "type": "git",
       "url": "git://github.com/kreopt/jinjajs.git"
-    }
+  },
+  "dependencies":{
+    "fetch":"*"
+  }
+  
 }
